--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 streamlit
 pandas
-pydeck
 requests
-streamlit-aggrid
-streamlit-geolocation
-streamlit-javascript
-GOOGLE_MAPS_API_KEY = "YOUR_GOOGLE_MAP_API_KEY"
+pydeck==0.8.0
+streamlit-aggrid==0.3.3
